Draft of final for PA apps

--- a/printing.css
+++ b/printing.css
@@ -168,7 +168,7 @@
     }
 
     .section-titles {
-        font-size: 18pt;
+        font-size: 24pt;
         padding: 2vh 0 2vh 0;
     }
 
@@ -185,10 +185,6 @@
 
     /*-------Header----------------*/
 
-    #temp_header {
-        border: solid 1px #67AAF9;
-    }
-
     .header-content {
         display: flex;
         flex-flow: row wrap;
@@ -198,7 +194,6 @@
         padding: 0.5em;
         height: 18vh;
         background-color: white;
-        border: solid 1px #67AAF9;
     }
 
         #header_info_box {
@@ -216,7 +211,7 @@
         #header_img {
             height: 100%;
             background-color: white;
-            border: solid #67AAF9 1em;
+            border: solid #67AAF9 0.5em;
             position: absolute;
             top: 0;
             left: 0;
@@ -284,8 +279,18 @@
 
                 .e-time {
                     color: #2f2f2f;
-                    text-align: start;
                 }
+
+                    #experience .e-time {
+                        text-align: start;
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        display: block;
+                        box-sizing: border-box;
+                        text-align: right;
+                        width: 50%;
+                    }
 
                 .e-location {
                     color: #2f2f2f;
@@ -302,14 +307,16 @@
             }
 
         #others {
-            border: 2px solid #67AAF9;
+            border: 0.2em solid #67AAF9;
             padding: 0 0 0.5em 0;
+            margin-top: 2em;
         }
 
             #others h2 {
                 background-color: #67AAF9;
                 padding-left: 1em;
                 color: white;
+                font-size: 18pt;
             }
 
             .skills p {
