--- a/printing.css
+++ b/printing.css
@@ -188,7 +188,7 @@
     .header-content {
         display: flex;
         flex-flow: row wrap;
-        justify-content: flex-end;
+        justify-content: flex-start;
         align-content: space-around;
         text-decoration: none;
         padding: 0.5em;
@@ -202,19 +202,7 @@
             justify-content: flex-start;
             align-content: space-around;
             height: 100%;
-            width: 60%;
-            position: absolute;
-            top: 0;
-            right: 1.5%;
-        }
-
-        #header_img {
-            height: 100%;
-            background-color: white;
-            border: solid #67AAF9 0.5em;
-            position: absolute;
-            top: 0;
-            left: 0;
+            background-color: lightblue;
         }
 
         .header-content * {
